tests/fixtures/valid/SingleBlankLineBetweenInterfaceMethods.php
<?php

declare(strict_types=1);

namespace Valid;

interface SingleBlankLineBetweenInterfaceMethods
{
    public function methodA(): void;

    public function methodB(): void;
}
